# nothelix

./: .devenv.flake.nix  .gitattributes  .gitignore  .gutter-bar-plugin-report.md  .helix-fork-rev  .output-dup-fix-report.md  AGENT.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  FIXES_SUMMARY.md  LICENSE  Makefile  Package.swift  README.md  UPSTREAM-DECORATION-GAP.draft.md  binding.gyp  devenv.nix  flake.nix  go.mod  grammar.js  install.sh  justfile  nothelix.toml.example  opencode.json  package.json  pyproject.toml  result  setup.py  test_image_render.jl  test_kitty.py  test_simple.txt  tree-sitter.json  wavelets.jl
.beads/: issues.jsonl
.cargo/: audit.toml
.devenv/: input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db  tasks.db-shm  tasks.db-wal
bindings/rust/: Cargo.toml  build.rs  lib.rs
docs/: ARCHITECTURE.md  ASYNC_CAPABILITIES.md  BUGS_TO_FIX_LATER.md  Gemfile  HELIX_INTEGRATION.md  JULIA_LSP_NOTES.md  KEYBINDINGS.md  MACRO_ARCHITECTURE.md  MANUAL_IMAGE_TEST.md  NOTEBOOK_ARCHITECTURE.md  NOTEBOOK_PLUGIN.md  STRUCTURE_VERIFICATION.md  TESTING.md  _config.yml  architecture.md  commands.md  contributing.md  credits.md  export.md  index.md  install.md  lsp.md  notebooks.md  playground.md  rendering.md  state-visibility-architecture.md  troubleshooting.md  upstreaming-roadmap-2026-06.md  widget-architecture.md
examples/: demo.jl  multi-plot-stress.ipynb  simple.jl
kernel/: ast_analysis.jl  audio.jl  capture_test.jl  cell_macros.jl  cell_registry.jl  classify_test.jl  duration_test.jl  output_bound_test.jl  output_capture.jl  provenance_test.jl  runner.jl  wavplay_test.jl  widget_test.jl  widgets.jl
libnothelix/: Cargo.toml  README.md  build.rs  error_hints.toml
libnothelix/benches/: animation_perf.rs
libnothelix/src/: chart.rs  error.rs  error_format.rs  graphics.rs  health.rs  json_utils.rs  kernel.rs  kitty_placeholder.rs  lib.rs  lsp.rs  markdown_overlays.rs  math_corpus.rs  math_format.rs  math_image.rs  notebook.rs  output_store.rs  parse.rs  resume.rs  slm.rs  table_image.rs  trust.rs  typst_export.rs  unicode.rs  wasm.rs
libnothelix/src/animation/: c_abi.rs  cache.rs  config.rs  decoder.rs  engine.rs  mod.rs  registry.rs  renderer.rs  steel_api.rs
libnothelix/src/animation/decoders/: apng.rs  frames.rs  gif.rs  gif_fixture.rs  lottie.rs  mod.rs  mp4.rs  unsupported.rs  webm.rs  webp.rs
libnothelix/src/animation/renderers/: kitty_native.rs  kitty_replay.rs  mod.rs  png.rs  static_fallback.rs
libnothelix/src/audio/: mod.rs  player.rs  registry.rs  wav.rs  waveform.rs
libnothelix/src/chart/: braille.rs  mod.rs  plot.rs  series.rs
libnothelix/src/error_format/: call_chain.rs  hints.rs  matching.rs  mod.rs  path.rs  render.rs  scanners.rs  text.rs  tokenize.rs  types.rs  undef.rs  util.rs
libnothelix/src/error_format/enrichment/: bounds.rs  dimension.rs  method_error.rs  mod.rs  not_callable.rs  parse_error.rs  var_name.rs
libnothelix/src/error_format/hints/: mod.rs  selector.rs
libnothelix/src/error_format/render/: mod.rs  raw.rs  report.rs  structured.rs  undefined.rs  var_context.rs
libnothelix/src/error_format/scan/: brackets.rs  cursor.rs  ident.rs  mod.rs
libnothelix/src/error_format/undef/: bindings.rs  message.rs  mod.rs
libnothelix/src/gallery/: fixtures.rs  inject.rs  mod.rs
libnothelix/src/graphics/: apc.rs  mod.rs  png.rs  protocol.rs
libnothelix/src/json_utils/: audio.rs  fields.rs  images.rs  mod.rs  text_plots.rs  widgets.rs
libnothelix/src/kernel/: ipc.rs  mod.rs  process.rs  scripts.rs
libnothelix/src/kitty_placeholder/: grid.rs  mod.rs  svg.rs
libnothelix/src/math_format/: batch.rs  blocks.rs  canonical.rs  comment.rs  mod.rs  reflow.rs  reserve.rs
libnothelix/src/math_image/: batch.rs  cache.rs  color.rs  compile.rs  document.rs  grid.rs  mod.rs  reply.rs  world.rs
libnothelix/src/mitex/: compat.typ
libnothelix/src/notebook/: cells.rs  convert.rs  embed.rs  export.rs  ffi.rs  ipynb.rs  marker.rs  mod.rs  roundtrip.rs  scan.rs
libnothelix/src/table_image/: document.rs  markdown.rs  mod.rs
libnothelix/src/typst_export/: block.rs  inline.rs  math.rs  mod.rs
libnothelix/src/unicode/: char_offsets.rs  conceal.rs  cursor.rs  environment.rs  escape.rs  fence.rs  font.rs  math_regions.rs  math_spans.rs  mod.rs  operators.rs  overlay.rs  scanner.rs  script.rs  sub_super.rs  symbol_aliases.rs  symbol_table.rs  typst_conceal.rs
libnothelix/src/unicode/symbol_table/: julia_repl.rs  mod.rs  unicode_math_aliases.rs
libnothelix/tests/: animation_integration.rs  build_id.rs  engine_snapshots.rs  math_render_corpus.rs  meta_binary.rs  nothelix_macros_manifest.rs
libnothelix/tests/fixtures/: simple.ipynb  simple.jl
libnothelix/tests/snapshots/: engine_snapshots__braille-chart@120x12.snap  engine_snapshots__braille-chart@120x40.snap  engine_snapshots__braille-chart@200x50.snap  engine_snapshots__braille-chart@80x24.snap  engine_snapshots__conceal-fourier-overlays.snap  engine_snapshots__conceal-fourier.snap  engine_snapshots__conceal-linear-algebra-overlays.snap  engine_snapshots__conceal-linear-algebra.snap  engine_snapshots__error-bounds.snap  engine_snapshots__error-long-message.snap  engine_snapshots__error-long-source-line.snap  engine_snapshots__error-undefined-symbol.snap  engine_snapshots__error-undefined-variable.snap  engine_snapshots__markdown-overlays.snap  engine_snapshots__math-image-grid@120x12.snap  engine_snapshots__math-image-grid@120x40.snap  engine_snapshots__math-image-grid@200x50.snap  engine_snapshots__math-image-grid@80x24.snap  engine_snapshots__math-reflow-cases.snap  engine_snapshots__math-reflow-pmatrix.snap  engine_snapshots__math-reserve@120x12.snap  engine_snapshots__math-reserve@120x40.snap  engine_snapshots__math-reserve@80x24.snap  engine_snapshots__typst-export.snap
lsp/: Manifest.toml  Project.toml  bootstrap.jl  julia-lsp  symbolserver-1.14.patch
plugin/: INSTALL.md  README.md  helix.scm  init.scm  kernel-manager.scm  nothelix.scm
queries/: highlights.scm  injections.scm  textobjects.scm
scripts/: capture-image-log.nu  (+3 more)
(+175 files in other folders)
