[workspace]
members = [
  "libnothelix",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["koalazub <elali@cokoala.me>"]
license = "MIT"
repository = "https://github.com/koalazub/nothelix"
edition = "2021"

[package]
name = "tree-sitter-notebook"
description = "Grammar for parsing Jupyter notebook cells with language injection"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "notebook"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository.workspace = true
edition.workspace = true
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
