[workspace]
members = [
  "libnothelix",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["koalazub <elali@cokoala.me>"]
license = "MIT"
repository = "https://github.com/koalazub/nothelix"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
