[package]
name = "libnothelix"
version = "0.1.0"
edition = "2021"

[lib]
name = "nothelix"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nothelix-meta"
path = "src/bin/nothelix-meta.rs"

[[bin]]
name = "nothelix-animation-smoke"
path = "src/bin/animation_smoke.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"
rmp-serde = "1"
which = "6.0"
nix = { version = "0.29", features = ["signal", "process"] }

# Image format handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Steel FFI bindings
steel-core = { path = "../../steel/crates/steel-core", features = ["dylibs", "sync"] }
abi_stable = "0.11"

inventory = "0.3"
thiserror = "1"

[features]
default = ["gif", "apng", "webp"]
gif = []
apng = []
webp = []
video = []
lottie = []

[dev-dependencies]
tempfile = "3.10"
png = "0.18"

[[bench]]
name = "animation_perf"
harness = false
