[package]
name = "libnothelix"
version = "0.1.0"
edition = "2021"

[lib]
name = "nothelix"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nothelix-meta"
path = "src/bin/nothelix-meta.rs"

[[bin]]
name = "nothelix-animation-smoke"
path = "src/bin/animation_smoke.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"
rmp-serde = "1"
which = "6.0"
tempfile = "3.10"
phf = { version = "0.11", features = ["macros"] }
nix = { version = "0.29", features = ["signal", "process"] }

typst = "0.15"
typst-layout = "0.15"
typst-render = "0.15"
typst-kit = { version = "0.15", features = ["embedded-fonts"] }
tiny-skia = "0.12"

# Image format handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Steel FFI bindings — pinned to the exact rev the helix fork pins so the
# dylib stays ABI-compatible with the host VM (loader accepts dylib steel
# <= host steel).
steel-core = { git = "https://github.com/mattwparas/steel.git", rev = "b67efd5c262962226424148bb87abefaf4109c5a", features = ["dylibs", "sync"] }
abi_stable = "0.11"

inventory = "0.3"
thiserror = "1"

[features]
default = ["gif", "apng", "webp"]
gif = []
apng = []
webp = []
video = []
lottie = []

[dev-dependencies]
tempfile = "3.10"
png = "0.18"

[[bench]]
name = "animation_perf"
harness = false
