[package]
name = "libnothelix"
version = "0.1.0"
edition = "2024"

[lib]
name = "nothelix"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nothelix-meta"
path = "src/bin/nothelix-meta.rs"
required-features = ["native"]

[[bin]]
name = "nothelix-animation-smoke"
path = "src/bin/animation_smoke.rs"
required-features = ["native"]

[[bin]]
name = "gen-gallery"
path = "src/bin/gen_gallery.rs"
required-features = ["native"]

[dependencies]
mitex = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"
phf = { version = "0.11", features = ["macros"] }

thiserror = "1"
comrak = { version = "0.53.0", default-features = false }

typst = { version = "0.15", optional = true }
typst-layout = { version = "0.15", optional = true }
typst-svg = { version = "0.15", optional = true }
rmp-serde = { version = "1", optional = true }
which = { version = "6.0", optional = true }
tempfile = { version = "3.10", optional = true }
nix = { version = "0.29", features = ["signal", "process"], optional = true }
typst-pdf = { version = "0.15", optional = true }
typst-kit = { version = "0.15", features = ["embedded-fonts"], optional = true }
resvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }
rayon = { version = "1", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"], optional = true }
inventory = { version = "0.3", optional = true }

steel-core = { git = "https://github.com/koalazub/steel.git", rev = "785149cc0d33498077668afa2142dc36425f24eb", features = ["dylibs", "sync"], optional = true }
abi_stable = { version = "0.11", optional = true }

wasm-bindgen = { version = "=0.2.121", optional = true }

[features]
default = ["native"]
render = ["dep:typst", "dep:typst-layout", "dep:typst-svg", "dep:typst-kit"]
native = [
  "render",
  "dep:steel-core", "dep:abi_stable", "dep:nix", "dep:which", "dep:tempfile",
  "dep:rmp-serde", "dep:inventory", "dep:rayon", "dep:typst-pdf",
  "dep:resvg", "dep:tiny-skia", "dep:image",
  "gif", "apng", "webp",
]
wasm = ["dep:wasm-bindgen"]
gif = []
apng = []
webp = []
video = []
lottie = []

[dev-dependencies]
tempfile = "3.10"
png = "0.18"
insta = "1.48.0"

[[bench]]
name = "animation_perf"
harness = false
